--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="#define" class="disabled" data-toggle="tab">Define</a></li>
     <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
     <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
+    <li><a href="#profile" class="disabled hidden" data-toggle="tab">Profile</a></li>
     <a href="#update-log" data-toggle="tab" class="disabled" type="hidden"></a>
 
   </ul>
@@ -122,10 +123,24 @@
       </div>
       <div class="modal-body">
       <div class="alert alert-danger" role="alert" style="display:none;" id="su_error"></div>
+      <form>
         <label for="su_username">Username:</label>
-        <input id="su_username" />
+        <input class="form-control" id="su_username" />
         <label for="su_password">Password:</label>
-        <input type="password" id="su_password" />
+        <input class="form-control" type="password" id="su_password" />
+        <label for="su_email">Email:</label>
+        <input class="form-control" id="su_email" />
+        <label for="su_age">Age:</label>
+        <input class="form-control" id="su_age" />
+        <label for="su_height">Height:</label>
+        <input class="form-control" id="su_height" />
+        <label for="su_startWeight">Start Weight:</label>
+        <input class="form-control" id="su_startWeight" />
+        <label for="su_goalWeight">Goal Weight:</label>
+        <input class="form-control" id="su_goalWeight" />
+        <label for="su_userGender">Gender:</label>
+        <input class="form-control" id="su_userGender" />
+      </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
