--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 
 <body>
   <ul class="nav nav-tabs">
-    <li><a href="#home" id="loginout" class="disabled" data-toggle="tab">Login</a>
-      <!--logout too -->
-    </li>
+    <li><a href="#profile" class="disabled hidden" data-toggle="tab">Profile</a></li>
     <li><a href="#define" class="disabled" data-toggle="tab">Define</a></li>
     <li><a href="#log" class="disabled" data-toggle="tab">Log</a></li>
     <li><a href="#history" class="disabled" data-toggle="tab">View History</a></li>
-    <li><a href="#profile" class="disabled hidden" data-toggle="tab">Profile</a></li>
+    
     <a href="#update-log" data-toggle="tab" class="disabled" type="hidden"></a>
 
   </ul>
@@ -44,6 +42,9 @@
         <div id="forLogout" style="display:none;">
           <button class="btn btn-primary">Logout</button>
         </div>
+      </div>
+      <div class="tab-pane fade" id="profile">
+        
       </div>
       <!-- DEFINE -->
       <div class="tab-pane fade" id="define">
@@ -128,6 +129,8 @@
         <input class="form-control" id="su_username" />
         <label for="su_password">Password:</label>
         <input class="form-control" type="password" id="su_password" />
+        <label for="su_confirmPW">Confirm Password:</label>
+        <input class="form-control" type="password" id="su_confirmPW" />
         <label for="su_email">Email:</label>
         <input class="form-control" id="su_email" />
         <label for="su_age">Age:</label>
